src/C90_parser.output
Terminals unused in grammar

   SIZEOF
   TYPE_NAME
   STATIC
   AUTO
   REGISTER
   CONST
   VOLATILE
   STRUCT
   UNION
   ENUM
   ELLIPSIS


State 223 conflicts: 1 shift/reduce


Grammar

    0 $accept: top $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression

   19 unary_operator: '&'
   20               | '*'
   21               | '+'
   22               | '-'
   23               | '~'
   24               | '!'

   25 cast_expression: unary_expression

   26 multiplicative_expression: cast_expression
   27                          | multiplicative_expression '*' cast_expression
   28                          | multiplicative_expression '/' cast_expression
   29                          | multiplicative_expression '%' cast_expression

   30 additive_expression: multiplicative_expression
   31                    | additive_expression '+' multiplicative_expression
   32                    | additive_expression '-' multiplicative_expression

   33 shift_expression: additive_expression
   34                 | shift_expression LEFT_OP additive_expression
   35                 | shift_expression RIGHT_OP additive_expression

   36 relational_expression: shift_expression
   37                      | relational_expression '<' shift_expression
   38                      | relational_expression '>' shift_expression
   39                      | relational_expression LE_OP shift_expression
   40                      | relational_expression GE_OP shift_expression

   41 equality_expression: relational_expression
   42                    | equality_expression EQ_OP relational_expression
   43                    | equality_expression NE_OP relational_expression

   44 and_expression: equality_expression
   45               | and_expression '&' equality_expression

   46 exclusive_or_expression: and_expression
   47                        | exclusive_or_expression '^' and_expression

   48 inclusive_or_expression: exclusive_or_expression
   49                        | inclusive_or_expression '|' exclusive_or_expression

   50 logical_and_expression: inclusive_or_expression
   51                       | logical_and_expression AND_OP inclusive_or_expression

   52 logical_or_expression: logical_and_expression
   53                      | logical_or_expression OR_OP logical_and_expression

   54 conditional_expression: logical_or_expression
   55                       | logical_or_expression '?' expression ':' conditional_expression

   56 assignment_expression: conditional_expression
   57                      | unary_expression assignment_operator assignment_expression

   58 assignment_operator: '='
   59                    | MUL_ASSIGN
   60                    | DIV_ASSIGN
   61                    | MOD_ASSIGN
   62                    | ADD_ASSIGN
   63                    | SUB_ASSIGN
   64                    | LEFT_ASSIGN
   65                    | RIGHT_ASSIGN
   66                    | AND_ASSIGN
   67                    | XOR_ASSIGN
   68                    | OR_ASSIGN

   69 expression: assignment_expression
   70           | expression ',' assignment_expression

   71 constant_expression: conditional_expression

   72 declaration: declaration_specifiers ';'
   73            | declaration_specifiers init_declarator_list ';'

   74 declaration_specifiers: type_specifier
   75                       | type_specifier declaration_specifiers
   76                       | storage_class_specifier

   77 init_declarator_list: init_declarator
   78                     | init_declarator_list ',' init_declarator

   79 init_declarator: declarator
   80                | declarator '=' initializer

   81 storage_class_specifier: TYPEDEF
   82                        | EXTERN

   83 type_specifier: VOID
   84               | CHAR
   85               | SHORT
   86               | INT
   87               | LONG
   88               | FLOAT
   89               | DOUBLE
   90               | SIGNED
   91               | UNSIGNED

   92 declarator: direct_declarator

   93 direct_declarator: IDENTIFIER
   94                  | '(' declarator ')'
   95                  | direct_declarator '[' constant_expression ']'
   96                  | direct_declarator '[' ']'
   97                  | direct_declarator '(' ')'

   98 initializer: assignment_expression
   99            | '{' initializer_list '}'
  100            | '{' initializer_list ',' '}'

  101 initializer_list: initializer
  102                 | initializer_list ',' initializer

  103 statement: labeled_statement
  104          | compound_statement
  105          | expression_statement
  106          | selection_statement
  107          | iteration_statement
  108          | jump_statement

  109 labeled_statement: IDENTIFIER ':' statement
  110                  | CASE constant_expression ':' statement
  111                  | DEFAULT ':' statement

  112 compound_statement: '{' '}'
  113                   | '{' statement_list '}'
  114                   | '{' declaration_list '}'
  115                   | '{' declaration_list statement_list '}'

  116 declaration_list: declaration
  117                 | declaration_list declaration

  118 statement_list: statement
  119               | statement_list statement

  120 expression_statement: ';'
  121                     | expression ';'

  122 selection_statement: IF '(' expression ')' statement
  123                    | IF '(' expression ')' statement ELSE statement
  124                    | SWITCH '(' expression ')' statement

  125 iteration_statement: WHILE '(' expression ')' statement
  126                    | DO statement WHILE '(' expression ')' ';'
  127                    | FOR '(' expression_statement expression_statement ')' statement
  128                    | FOR '(' expression_statement expression_statement expression ')' statement

  129 jump_statement: GOTO IDENTIFIER ';'
  130               | CONTINUE ';'
  131               | BREAK ';'
  132               | RETURN ';'
  133               | RETURN expression ';'

  134 top: translation_unit

  135 translation_unit: external_declaration
  136                 | translation_unit external_declaration

  137 external_declaration: function_definition
  138                     | declaration

  139 function_definition: declaration_specifiers declarator compound_statement
  140                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33) 24
'%' (37) 29
'&' (38) 19 45
'(' (40) 4 7 8 94 97 122 123 124 125 126 127 128
')' (41) 4 7 8 94 97 122 123 124 125 126 127 128
'*' (42) 20 27
'+' (43) 21 31
',' (44) 14 70 78 100 102
'-' (45) 22 32
'.' (46) 9
'/' (47) 28
':' (58) 55 109 110 111
';' (59) 72 73 120 121 126 129 130 131 132 133
'<' (60) 37
'=' (61) 58 80
'>' (62) 38
'?' (63) 55
'[' (91) 6 95 96
']' (93) 6 95 96
'^' (94) 47
'{' (123) 99 100 112 113 114 115
'|' (124) 49
'}' (125) 99 100 112 113 114 115
'~' (126) 23
error (256)
IDENTIFIER (258) 1 9 10 93 109 129
CONSTANT (259) 2
STRING_LITERAL (260) 3
SIZEOF (261)
PTR_OP (262) 10
INC_OP (263) 11 16
DEC_OP (264) 12 17
LEFT_OP (265) 34
RIGHT_OP (266) 35
LE_OP (267) 39
GE_OP (268) 40
EQ_OP (269) 42
NE_OP (270) 43
AND_OP (271) 51
OR_OP (272) 53
MUL_ASSIGN (273) 59
DIV_ASSIGN (274) 60
MOD_ASSIGN (275) 61
ADD_ASSIGN (276) 62
SUB_ASSIGN (277) 63
LEFT_ASSIGN (278) 64
RIGHT_ASSIGN (279) 65
AND_ASSIGN (280) 66
XOR_ASSIGN (281) 67
OR_ASSIGN (282) 68
TYPE_NAME (283)
TYPEDEF (284) 81
EXTERN (285) 82
STATIC (286)
AUTO (287)
REGISTER (288)
CHAR (289) 84
SHORT (290) 85
INT (291) 86
LONG (292) 87
SIGNED (293) 90
UNSIGNED (294) 91
FLOAT (295) 88
DOUBLE (296) 89
CONST (297)
VOLATILE (298)
VOID (299) 83
STRUCT (300)
UNION (301)
ENUM (302)
ELLIPSIS (303)
CASE (304) 110
DEFAULT (305) 111
IF (306) 122 123
ELSE (307) 123
SWITCH (308) 124
WHILE (309) 125 126
DO (310) 126
FOR (311) 127 128
GOTO (312) 129
CONTINUE (313) 130
BREAK (314) 131
RETURN (315) 132 133


Nonterminals, with rules where they appear

$accept (85)
    on left: 0
primary_expression (86)
    on left: 1 2 3 4, on right: 5
postfix_expression (87)
    on left: 5 6 7 8 9 10 11 12, on right: 6 7 8 9 10 11 12 15
argument_expression_list (88)
    on left: 13 14, on right: 8 14
unary_expression (89)
    on left: 15 16 17 18, on right: 16 17 25 57
unary_operator (90)
    on left: 19 20 21 22 23 24, on right: 18
cast_expression (91)
    on left: 25, on right: 18 26 27 28 29
multiplicative_expression (92)
    on left: 26 27 28 29, on right: 27 28 29 30 31 32
additive_expression (93)
    on left: 30 31 32, on right: 31 32 33 34 35
shift_expression (94)
    on left: 33 34 35, on right: 34 35 36 37 38 39 40
relational_expression (95)
    on left: 36 37 38 39 40, on right: 37 38 39 40 41 42 43
equality_expression (96)
    on left: 41 42 43, on right: 42 43 44 45
and_expression (97)
    on left: 44 45, on right: 45 46 47
exclusive_or_expression (98)
    on left: 46 47, on right: 47 48 49
inclusive_or_expression (99)
    on left: 48 49, on right: 49 50 51
logical_and_expression (100)
    on left: 50 51, on right: 51 52 53
logical_or_expression (101)
    on left: 52 53, on right: 53 54 55
conditional_expression (102)
    on left: 54 55, on right: 55 56 71
assignment_expression (103)
    on left: 56 57, on right: 13 14 57 69 70 98
assignment_operator (104)
    on left: 58 59 60 61 62 63 64 65 66 67 68, on right: 57
expression (105)
    on left: 69 70, on right: 4 6 55 70 121 122 123 124 125 126 128
    133
constant_expression (106)
    on left: 71, on right: 95 110
declaration (107)
    on left: 72 73, on right: 116 117 138
declaration_specifiers (108)
    on left: 74 75 76, on right: 72 73 75 139
init_declarator_list (109)
    on left: 77 78, on right: 73 78
init_declarator (110)
    on left: 79 80, on right: 77 78
storage_class_specifier (111)
    on left: 81 82, on right: 76
type_specifier (112)
    on left: 83 84 85 86 87 88 89 90 91, on right: 74 75
declarator (113)
    on left: 92, on right: 79 80 94 139 140
direct_declarator (114)
    on left: 93 94 95 96 97, on right: 92 95 96 97
initializer (115)
    on left: 98 99 100, on right: 80 101 102
initializer_list (116)
    on left: 101 102, on right: 99 100 102
statement (117)
    on left: 103 104 105 106 107 108, on right: 109 110 111 118 119
    122 123 124 125 126 127 128
labeled_statement (118)
    on left: 109 110 111, on right: 103
compound_statement (119)
    on left: 112 113 114 115, on right: 104 139 140
declaration_list (120)
    on left: 116 117, on right: 114 115 117
statement_list (121)
    on left: 118 119, on right: 113 115 119
expression_statement (122)
    on left: 120 121, on right: 105 127 128
selection_statement (123)
    on left: 122 123 124, on right: 106
iteration_statement (124)
    on left: 125 126 127 128, on right: 107
jump_statement (125)
    on left: 129 130 131 132 133, on right: 108
top (126)
    on left: 134, on right: 0
translation_unit (127)
    on left: 135 136, on right: 134 136
external_declaration (128)
    on left: 137 138, on right: 135 136
function_definition (129)
    on left: 139 140, on right: 137


State 0

    0 $accept: . top $end

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    SIGNED      shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    VOID        shift, and go to state 12
    '('         shift, and go to state 13

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    declarator               go to state 18
    direct_declarator        go to state 19
    top                      go to state 20
    translation_unit         go to state 21
    external_declaration     go to state 22
    function_definition      go to state 23


State 1

   93 direct_declarator: IDENTIFIER .

    $default  reduce using rule 93 (direct_declarator)


State 2

   81 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 81 (storage_class_specifier)


State 3

   82 storage_class_specifier: EXTERN .

    $default  reduce using rule 82 (storage_class_specifier)


State 4

   84 type_specifier: CHAR .

    $default  reduce using rule 84 (type_specifier)


State 5

   85 type_specifier: SHORT .

    $default  reduce using rule 85 (type_specifier)


State 6

   86 type_specifier: INT .

    $default  reduce using rule 86 (type_specifier)


State 7

   87 type_specifier: LONG .

    $default  reduce using rule 87 (type_specifier)


State 8

   90 type_specifier: SIGNED .

    $default  reduce using rule 90 (type_specifier)


State 9

   91 type_specifier: UNSIGNED .

    $default  reduce using rule 91 (type_specifier)


State 10

   88 type_specifier: FLOAT .

    $default  reduce using rule 88 (type_specifier)


State 11

   89 type_specifier: DOUBLE .

    $default  reduce using rule 89 (type_specifier)


State 12

   83 type_specifier: VOID .

    $default  reduce using rule 83 (type_specifier)


State 13

   94 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 13

    declarator         go to state 24
    direct_declarator  go to state 19


State 14

  138 external_declaration: declaration .

    $default  reduce using rule 138 (external_declaration)


State 15

   72 declaration: declaration_specifiers . ';'
   73            | declaration_specifiers . init_declarator_list ';'
  139 function_definition: declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 13
    ';'         shift, and go to state 25

    init_declarator_list  go to state 26
    init_declarator       go to state 27
    declarator            go to state 28
    direct_declarator     go to state 19


State 16

   76 declaration_specifiers: storage_class_specifier .

    $default  reduce using rule 76 (declaration_specifiers)


State 17

   74 declaration_specifiers: type_specifier .
   75                       | type_specifier . declaration_specifiers

    TYPEDEF   shift, and go to state 2
    EXTERN    shift, and go to state 3
    CHAR      shift, and go to state 4
    SHORT     shift, and go to state 5
    INT       shift, and go to state 6
    LONG      shift, and go to state 7
    SIGNED    shift, and go to state 8
    UNSIGNED  shift, and go to state 9
    FLOAT     shift, and go to state 10
    DOUBLE    shift, and go to state 11
    VOID      shift, and go to state 12

    $default  reduce using rule 74 (declaration_specifiers)

    declaration_specifiers   go to state 29
    storage_class_specifier  go to state 16
    type_specifier           go to state 17


State 18

  140 function_definition: declarator . compound_statement

    '{'  shift, and go to state 30

    compound_statement  go to state 31


State 19

   92 declarator: direct_declarator .
   95 direct_declarator: direct_declarator . '[' constant_expression ']'
   96                  | direct_declarator . '[' ']'
   97                  | direct_declarator . '(' ')'

    '('  shift, and go to state 32
    '['  shift, and go to state 33

    $default  reduce using rule 92 (declarator)


State 20

    0 $accept: top . $end

    $end  shift, and go to state 34


State 21

  134 top: translation_unit .
  136 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    TYPEDEF     shift, and go to state 2
    EXTERN      shift, and go to state 3
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    SIGNED      shift, and go to state 8
    UNSIGNED    shift, and go to state 9
    FLOAT       shift, and go to state 10
    DOUBLE      shift, and go to state 11
    VOID        shift, and go to state 12
    '('         shift, and go to state 13

    $default  reduce using rule 134 (top)

    declaration              go to state 14
    declaration_specifiers   go to state 15
    storage_class_specifier  go to state 16
    type_specifier           go to state 17
    declarator               go to state 18
    direct_declarator        go to state 19
    external_declaration     go to state 35
    function_definition      go to state 23


State 22

  135 translation_unit: external_declaration .

    $default  reduce using rule 135 (translation_unit)


State 23

  137 external_declaration: function_definition .

    $default  reduce using rule 137 (external_declaration)


State 24

   94 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 36


State 25

   72 declaration: declaration_specifiers ';' .

    $default  reduce using rule 72 (declaration)


State 26

   73 declaration: declaration_specifiers init_declarator_list . ';'
   78 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 37
    ';'  shift, and go to state 38


State 27

   77 init_declarator_list: init_declarator .
